2007-07-14  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/sctp2.c: make license explicit
	* src/drivers/sctp.c: make license explicit
	* src/modules/tpiperf.c: make license explicit

2007-06-28  Brian Bidulock  <bidulock@openss7.org>

	* doc/papers/sctp.fig: change orientation to portrait
	* doc/papers/sockets.fig: change orientation to portrait
	* doc/papers/xtios.fig: change orientation to portrait

2007-06-25  Brian Bidulock  <bidulock@openss7.org>

	* .pkgrelease: bumped release numbers
	* debian/changelog: bumped release numbers
	* doc/manual/news.texi: bumped release numbers

2007-06-24  Brian Bidulock  <bidulock@openss7.org>

	* strsctp.spec.in: recognize EL4 and EL5 for kernel-develop

2007-06-23  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/news.texi: updates for release

2007-06-22  Brian Bidulock  <bidulock@openss7.org>

	* strsctp.spec.in: netconfig respects libtirpc

	* doc/manual/bugs.texi: doc updates for release
	* doc/manual/configure.texi: doc updates for release
	* doc/manual/descrip.texi: doc updates for release
	* doc/manual/prerequisites.texi: doc updates for release
	* doc/manual/releases.texi: doc updates for release
	* doc/manual/rpm.texi: doc updates for release
	* doc/manual/todo.texi: doc updates for release

2007-06-21  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/todo.texi: doc updates for release

2007-06-20  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/news.texi: new distro/kernel support
	* doc/manual/prerequisites.texi: new distro/kernel support
	* acinclude.m4: updates for Fedora 7 and 2.6.21 kernel
	* src/drivers/sctp2.c: updates for Fedora 7 and 2.6.21 kernel
	* strsctp.spec.in: recognize Fedora 7 kernels
	* strsctp.lsm.in: update file sizes for release

2007-06-18  Brian Bidulock  <bidulock@openss7.org>

	* doc/papers/Makefile.am: updates to pass distcheck target

2007-06-17  Brian Bidulock  <bidulock@openss7.org>

	* doc/papers/sctpresults.tex: updates for release
