@@ -1,3 +1,9 @@
+2007-07-18  Brian Bidulock  <bidulock@openss7.org>
+
+	* src/drivers/sctp2.c:
+	  - workaround for incorrect driver use of NETIF_F_HW_CSUM
+	  - properly set XTI_SNDBUF and XTI_RCVBUF
+
 2007-07-14  Brian Bidulock  <bidulock@openss7.org>
 
 	* src/drivers/sctp2.c: make license explicit
